@@ -1,5 +1,11 @@
 History of Win32::API perl extension.
 
+2008-03-23  Win32::API v0.55     Cosimo
+
+   - Integrated patch from Salvador Ortiz Garcia (sog at msg com mx)
+     which fixes RT #14660. There was a bug in arguments type packing
+     unpacking of char* (and other pointer types). 
+
 2008-03-04  Win32::API v0.54     Cosimo
 
    - Try to clean up this big OS check mess.
